--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,27 @@
 # ==============
 # Config file for plugin MapSaver
 # ==============
-language: "fr_FR"
+Language: "fr_FR"
+Storage:
+  Type: "mysql"
+  TablePrefix: "MapSaver"
+  Connection:
+    Host: "localhost"
+    Port: "3306"
+    Database: "my_database"
+    User: "my_user"
+    Password: "my_password"
+    UseSSL: true
+Privacy:
+  # PRIMARY_OWNER => seul le owner (premier save) peut choisir la privacy policy tous les autres seront privée
+  # PUBLIC => toutes les maps sont public
+  # PRIVATE => toutes les maps sont privées
+  # ALL => No restriction
+  # UNIQUE => seul le owner peut sauvegarder la map
+  Mode: "" # PRIMARY_OWNER, PUBLIC, UNIQUE
+
+# A save 1 public => private
+# B save 1 private
+#
+# A save 1 private
+# B save 1 private
