Add name in PlayerMap and improve saving map and error messages

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@
 # Config file for plugin MapSaver
 # ==============
 Language: "fr_FR"
+ServerName: "server"
 Storage:
   Type: "mysql"
   TablePrefix: "MapSaver"
