--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,5 @@
-version = 3.0.0-RC5
+version = "2.7.3"
+align.preset = "more"
+maxColumn = 120
+rewrite.rules = [SortImports, SortModifiers, RedundantBraces, RedundantParens]
 
