--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,8 @@
-version = "2.7.3"
+version = "3.4.3"
+runner.dialect = "scala213"
 align.preset = "more"
 maxColumn = 120
-rewrite.rules = [SortImports, SortModifiers, RedundantBraces, RedundantParens]
-
+rewrite.rules = [Imports, SortModifiers, RedundantBraces, RedundantParens]
+rewrite.imports.expand = false
+rewrite.imports.sort = original
+rewrite.trailingCommas.style = never
