Fix defaultVisiblity and change from offline to online players for search

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,5 +16,5 @@ Storage:
     UseSSL: true
 Options:
   PageSize: 10
-  DefaultVisibility: "PRIVATE"
+  DefaultVisibility: "PUBLIC"
   ConsumeEmptyMap: true
