--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -3,6 +3,7 @@ name: Scala CI
 on:
   push:
     branches: [ master ]
+    tags: [ v* ]
   pull_request:
     branches: [ master ]
 
@@ -25,3 +26,9 @@ jobs:
       with:
         name: mapsaver
         path: target/scala-2.13/MapSaver-*.jar
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        draft: true
+        files: target/scala-2.13/MapSaver-*.jar
